--- a/onepunch/src/main/resources/application.properties
+++ b/onepunch/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8181
 server.servlet.context-path=/api
 
 #config DBlocal
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/onepunch
 spring.datasource.username=postgres
-spring.datasource.password=lili
+spring.datasource.password=1234
 spring.datasource.platform=postgresql
 spring.datasource.driver=org.postgresql.Driver
 spring.batch.job.enabled=false
