--- a/onepunch/pom.xml
+++ b/onepunch/pom.xml
@@ -20,21 +20,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<version>3.0.0</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>42.5.1</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -45,7 +49,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>3.0.0</version>
 			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>com.github.nyla-solutions</groupId>
+            <artifactId>gedi-geode-spring-security</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+		<dependency>
+			<groupId>jakarta.authentication</groupId>
+			<artifactId>jakarta.authentication-api</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
