--- a/onepunch/src/main/resources/application.properties
+++ b/onepunch/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8181
 server.servlet.context-path=/api
 
 #config DBlocal
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/OnePunch
 spring.datasource.username=postgres
 spring.datasource.password=lili
 spring.datasource.platform=postgresql
